--- a/package.json
+++ b/package.json
@@ -1,28 +1,10 @@
 {
-  "name": "static",
+  "name": "tame-functional-ferret",
   "version": "1.0.0",
-  "description": "This is a static template with no bundling",
-  "main": "index.html",
-  "scripts": {
-    "start": "serve",
-    "build": "echo This is a static template, there is no bundler or bundling involved!"
+  "private": true,
+  "dependencies": {
+    "parcel-bundler": "^1.6.1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/codesandbox-app/static-template.git"
-  },
-  "keywords": [
-    "static",
-    "template",
-    "codesandbox"
-  ],
-  "author": "Ives van Hoorne",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/codesandbox-app/static-template/issues"
-  },
-  "homepage": "https://github.com/codesandbox-app/static-template#readme",
-  "devDependencies": {
-    "serve": "^11.2.0"
-  }
+  "scripts": {},
+  "devDependencies": {}
 }
